--- a/scene.yaml
+++ b/scene.yaml
@@ -14,39 +14,24 @@ lights:
         diffuse: 1
         ambient: .6
         visible: true
-    directional1:
-        type: directional
-        direction: [0.293,-0.861,-0.415]
-        ambient: .5
-        diffuse: .9
-        specular: 1.
-        visible: false
-    point1:
-        type: point
-        position: [0, -100, 0px]
-        origin: ground
-        ambient: .2
-        diffuse: .2
-        specular: .5
-        visible: false
+        
 styles:
-    # Shaders Demo
-    windows:
-        url: styles/windows.yaml
-   
-    basic-buildings:
-        base: polygons
-        shaders:
-            blocks:
-                color: |
-                    color.rgb *= vec3(min((v_world_position.z*.001 + .6),1.));
+
 sources:
     osm:
         type: TopoJSON
         url:  https://vector.mapzen.com/osm/all/{z}/{x}/{y}.topojson?api_key=vector-tiles-rKpnpkD
-        max_zoom: 17
+        max_zoom: 20
     NOAA:
         type: GeoJSON
-        url: http://csc-s-gis1-d:6080/arcgis/rest/services/Test/MA/MapServer
-        max_zoom: 17
+        url: file.json
+        max_zoom: 20
 
+layers:
+    slr:
+        data: { source: NOAA }
+        draw:
+            polygons:
+                order: 1
+                color: feature.color
+                extrude: true
